Quorum3/Library/Tests/Inheritance/Pass/BInheritsMethodFoo.quorum
class BInheritsMethodFoo is AHasMethodFoo

end