Quorum3/Library/Tests/Inheritance/Fail/ForgotBlueprint.quorum
class ForgotBlueprint  is ForgotBlueprintParent

end